fix: image align left

--- a/themes/material-flow/source/less/_article.less
+++ b/themes/material-flow/source/less/_article.less
@@ -8,7 +8,6 @@
   img {
     position: relative;
     display: block;
-    margin: 0 auto;
     background: white;
     transition: all 0.24s ease;
 
