--- a/themes/material-flow/source/less/_main.less
+++ b/themes/material-flow/source/less/_main.less
@@ -75,7 +75,7 @@
         margin-right: -@gap;
         width: auto;
         // max-width: 100%;
-        margin: 16px auto;
+        margin: 16px 0;
       }
     }
   }
